appId: app.com.nudgestories
steps:
  - launchApp
  - tapOn: 'Profile'
  - tapOn: 'Delete Account'
  - confirm
  - assertNotVisible: 'Dashboard'
  - assertVisible: 'Sign Up'
