appId: app.com.nudgestories
steps:
  - launchApp
  - tapOn: 'Quiz'
  - tapOn: 'Start Quiz'
  - assertVisible: 'Question 1'
  - tapOn: 'Answer 1'
  - tapOn: 'Next'
  - assertVisible: 'Question 2'
  - tapOn: 'Answer 2'
  - tapOn: 'Next'
  - assertVisible: 'Question 3'
  - tapOn: 'Answer 4'
  - tapOn: 'Next'
  - assertVisible: 'Question 4'
  - tapOn: 'Answer 3'
  - tapOn: 'Next'
  - assertVisible: 'Question 5'
  - tapOn: 'Answer 3'
  - tapOn: 'Next'
  - assertVisible: 'Question 6'
  - tapOn: 'Answer 1'
  - tapOn: 'Next'
  - assertVisible: 'Question 7'
  - tapOn: 'Answer 2'
  - tapOn: 'Next'
  - assertVisible: 'Question 8'
  - tapOn: 'Answer 1'
  - tapOn: 'Next'
  - assertVisible: 'Question 9'
  - tapOn: 'Answer 4'
  - tapOn: 'Next'
  - assertVisible: 'Question 10'
  - tapOn: 'Answer 2'
  - tapOn: 'Submit'
  - assertVisible: 'Quiz Completed'
